<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ubuntu.homework02.CreateTaskActivity">

    <EditText
        android:id="@+id/create_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/create_date"
        android:layout_alignLeft="@+id/create_date"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/create_date"
        android:layout_alignStart="@+id/create_date"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="16dp"
        android:maxLength="20"/>

    <EditText
        android:id="@+id/create_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/create_title"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/date"
        android:inputType="date"
        android:focusableInTouchMode="false"
        android:focusable="true"/>

    <EditText
        android:id="@+id/create_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/create_date"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/time"
        android:inputType="time"
        android:focusableInTouchMode="false"
        android:focusable="true"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/create_time"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="25dp"
        android:text="@string/priority"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/textView"
        android:layout_marginTop="25dp">

        <RadioButton
            android:id="@+id/rb_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/high"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/rb_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/rb_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/low" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_save_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/save" />
</android.widget.RelativeLayout>
